--- a/cdk/package.json
+++ b/cdk/package.json
@@ -22,8 +22,10 @@
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.118.0",
+    "@aws-cdk/aws-codepipeline": "^1.118.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.118.0",
     "@aws-cdk/aws-lambda": "^1.118.0",
-    "@aws-cdk/core": "1.89.0",
+    "@aws-cdk/core": "^1.118.0",
     "@aws-cdk/pipelines": "^1.118.0",
     "source-map-support": "^0.5.16"
   }
